test/corpus/canonical.txt
==================
Stack and run
==================

stack Samples {
  f32: value;
  u8: quality;
}

run scale_values(
  input: pack Samples,
  <count: i64>,
  <scale: f32>
) -> f32:
  for chunk in input using f32s up to <count>:
    let quality: u32s = widen(chunk.quality)
    yield chunk.value * <scale>

---

(source_file
  (stack_definition
    name: (type_identifier)
    (field_group
      type: (storage_type)
      name: (identifier))
    (field_group
      type: (storage_type)
      name: (identifier)))
  (run_definition
    name: (identifier)
    (parameter_list
      (parameter
        (pack_parameter
          name: (identifier)
          type: (pack_type
            schema: (type_identifier))))
      (parameter
        (scalar_parameter
          name: (scalar_name)
          type: (storage_type)))
      (parameter
        (scalar_parameter
          name: (scalar_name)
          type: (storage_type))))
    result: (storage_type)
    (traversal_statement
      binding: (identifier)
      pack: (identifier)
      domain: (rack_type)
      count: (scalar_expression
        value: (scalar_value
          (identifier)))
      (let_statement
        name: (identifier)
        type: (type
          (rack_type))
        value: (expression
          (call_expression
            function: (identifier)
            (expression
              (field_expression
                value: (expression
                  (primary_expression
                    (identifier)))
                field: (identifier))))))
      (yield_statement
        value: (expression
          (binary_expression
            (expression
              (field_expression
                value: (expression
                  (primary_expression
                    (identifier)))
                field: (identifier)))
            (expression
              (scalar_expression
                value: (scalar_value
                  (identifier))))))))))

==================
Fused flow and masked rake
==================

crunch advance(positions: f32s, velocities: f32s) -> f32s:
  | scaled: f32s <| velocities * <0.5>
  | result: f32s <| positions + scaled
  return result

rake safe_root(values: f32s) -> f32s:
  tine #valid when values >= <0.0>

  through #valid else <0.0> into rooted:
    sqrt(values)

  return sweep:
    | #valid => rooted
    | _      => <0.0>

---

(source_file
  (crunch_definition
    name: (identifier)
    (parameter_list
      (parameter
        (value_parameter
          name: (identifier)
          type: (rack_type)))
      (parameter
        (value_parameter
          name: (identifier)
          type: (rack_type))))
    result: (type
      (rack_type))
    (fused_binding
      name: (identifier)
      type: (type
        (rack_type))
      value: (expression
        (binary_expression
          (expression
            (primary_expression
              (identifier)))
          (expression
            (scalar_expression
              value: (scalar_value
                (float_literal)))))))
    (fused_binding
      name: (identifier)
      type: (type
        (rack_type))
      value: (expression
        (binary_expression
          (expression
            (primary_expression
              (identifier)))
          (expression
            (primary_expression
              (identifier))))))
    (return_statement
      value: (expression
        (primary_expression
          (identifier)))))
  (rake_definition
    name: (identifier)
    (parameter_list
      (parameter
        (value_parameter
          name: (identifier)
          type: (rack_type))))
    result: (type
      (rack_type))
    (tine_declaration
      name: (tine
        (tine_name))
      condition: (predicate
        (predicate_arithmetic
          (predicate_atom
            (identifier)))
        (predicate_arithmetic
          (predicate_atom
            (scalar_expression
              value: (scalar_value
                (float_literal)))))))
    (through_statement
      mask: (tine
        (tine_name))
      passthrough: (scalar_expression
        value: (scalar_value
          (float_literal)))
      name: (identifier)
      value: (expression
        (call_expression
          function: (identifier)
          (expression
            (primary_expression
              (identifier))))))
    (return_sweep_statement
      (sweep_arm
        selector: (tine
          (tine_name))
        value: (expression
          (primary_expression
            (identifier))))
      (sweep_arm
        value: (expression
          (scalar_expression
            value: (scalar_value
              (float_literal))))))))

==================
Mutable locations and static lists
==================

crunch stateful(values: f32s) -> f32s:
  accumulator: f32s := values
  accumulator <- shuffle(accumulator, [1, 0, 3, 2])
  inspect(accumulator)
  return accumulator

---

(source_file
  (crunch_definition
    (identifier)
    (parameter_list
      (parameter
        (value_parameter
          (identifier)
          (rack_type))))
    (type
      (rack_type))
    (mutable_binding
      (identifier)
      (type
        (rack_type))
      (expression
        (primary_expression
          (identifier))))
    (assignment_statement
      (identifier)
      (expression
        (shuffle_expression
          (expression
            (primary_expression
              (identifier)))
          (integer_literal)
          (integer_literal)
          (integer_literal)
          (integer_literal))))
    (expression_statement
      (expression
        (call_expression
          (identifier)
          (expression
            (primary_expression
              (identifier))))))
    (return_statement
      (expression
        (primary_expression
          (identifier))))))
