test/corpus/comments.txt
==================
Nested block comments
==================

~~ Comments and blank lines don't change the top-level layout.

(* A leading comment (* can nest too. *) *)

(* A second leading comment follows a blank line. *)
scratch absolute(values: f32s) -> f32s:
  let result = abs(values)
  (* A body comment (* can nest here too. *) *)
  result (* and can follow an expression *)

---

(source_file
  (line_comment)
  (block_comment)
  (block_comment)
  (scratch_definition
    (identifier)
    (parameter_list
      (parameter
        (value_parameter
          (identifier)
          (type
            (rack_type)))))
    (type
      (rack_type))
    (let_statement
      (identifier)
      (expression
        (call_expression
          (identifier)
          (expression
            (primary_expression
              (identifier))))))
    (block_comment)
    (expression_statement
      (expression
        (primary_expression
          (identifier))))
    (block_comment)))
